--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name":"David Vento",
-	"short_name":"DVento",
+	"name":"Cecilia Rojas",
+	"short_name":"Marce",
 	"description":"Bienvenido a mi pagina web",
 	"background_color":"white",
 	"theme_color":"white",
