--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name":"Cecilia Rojas",
-	"short_name":"Marce",
+	"short_name":"Mar'ce Rojas",
 	"description":"Bienvenido a mi pagina web",
 	"background_color":"white",
 	"theme_color":"white",
